--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
     margin-bottom: 20px;
     overflow-x: scroll;
 }
-#dispay::-webkit-scrollbar {
+#display::-webkit-scrollbar {
     display: block;
     height: 3px;
 }
